# vaultwise

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html
src/: __init__.py  database.py  main.py  models.py
src/routers/: __init__.py  documents.py  qa.py  quizzes.py  search.py  training.py
src/services/: __init__.py  article_generator.py  ingestion.py  qa_engine.py  quiz_generator.py  tfidf_engine.py
tests/: __init__.py  conftest.py  test_analytics.py  test_documents.py  test_ingest.py  test_ingestion.py  test_qa.py  test_quizzes.py  test_search.py  test_tfidf_engine.py  test_training.py
vaultwise/: __init__.py  analytics.py  database.py  ingest.py  main.py  models.py  qa.py  search.py  seed.py  training.py
