[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultwise"
version = "0.1.0"
description = "Knowledge management platform -- ingest, search, train, analyze"
authors = [{name = "Donald Havery", email = "dbhavery@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "numpy>=1.24",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.26"]

[project.scripts]
vaultwise = "vaultwise.main:main"

[tool.setuptools.packages.find]
include = ["vaultwise*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
