[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultwise"
version = "1.0.0"
description = "Knowledge Management Platform — document ingestion, TF-IDF search, AI Q&A with citations, training articles and quizzes"
authors = [{name = "Donald Havery"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.26"]

[project.scripts]
vaultwise = "src.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
